# sark

./: .gitignore  .solargraph.yml  Cargo.toml  Gemfile  Makefile  README.md  build.rs  default.nix  flake.nix  license-apache  license-mit  result  rust-toolchain.toml  shell.nix
.github/docker/: Dockerfile  Makefile
.github/make/serial/: minipush.rb  miniterm.rb
.github/make/serial/minipush/: progressbar_patch.rb
.github/make/tests/: boot_test.rb  console_io_test.rb  dispatch.rb  exit_code_test.rb  test.rb
.github/workflows/: container.yml  documentation.yml  release.yml  test.yml
.github/zed/: settings.json
.zed/: settings.json
make/: docker.mk  operating_system.mk
make/tests/: boot_test.rb  exit_code_test.rb  test.rb
src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/: common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  kernel.ld  memory.rs
src/console/: null_console.rs
src/cpu/: boot.rs
