[package]
name = "sark"
version = "0.1.0"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = ["all"]
bsp_rpi3 = []
bsp_rpi4 = []
bsp_rpi5 = []
all = ["bsp_rpi3", "bsp_rpi4", "bsp_rpi5"]

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "10" }
