[package]
name = "sark"
version = "0.1.0"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
edition = "2021"
homepage = "https://sark.kibertexnik.uz"
repository = "https://github.com/kibertexnik/sark"
description = "Monolith kernel for Raspberry Pi"
keywords = ["raspberry", "kernel"]
license = "MIT OR Apache-2.0"

[profile.release]
lto = true

[features]
# default = ["all"]
bsp_rpi3 = ["dep:tock-registers"]
bsp_rpi4 = ["dep:tock-registers"]
bsp_rpi5 = ["dep:tock-registers"]
all = ["bsp_rpi3", "bsp_rpi4", "bsp_rpi5"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

# Optional dependencies
tock-registers = { version = "0.9", default-features = false, features = [
  "register_types",
], optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "10" }
